--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -2,40 +2,59 @@
     <div class="col-md-3">
         <span class="hipster img-fluid rounded"></span>
     </div>
-    <div class="col-md-9">
-        <h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>
-        <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
+    <div class="col-md-7" [ngSwitch]="isAuthenticated()">
+        <div class="card-body1" style="text-align: center;margin:5% auto;" *ngSwitchCase="false">
 
-        <div [ngSwitch]="isAuthenticated()">
-            <div class="alert alert-success" *ngSwitchCase="true">
-                <span id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message"
-                    translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>
+            <div>
+                <div style="width: 520px;margin: auto;">
+                    <div style="width: 100%;margin-bottom: 20px">
+                        <div style="margin:10px auto; height: 80px; width: 80px;background: url('../../content/images/favicon.ico') no-repeat center center;background-size:cover;">
+                        </div>
+                    </div>
+                    <form class="form" role="form" (ngSubmit)="login()">
+                        <div style="margin: 10px 0; height: 50px;width: 520px">
+                            <div style="float: left;width: 70px;height: 50px;line-height: 50px;font-size: 18px;">
+                                账号:
+                            </div>
+                            <input style="width: 412px;float: left;height: 50px" type="text" class="form-control" name="username" id="username" placeholder="{{'global.form.username.placeholder' | translate}}"
+                                   [(ngModel)]="username">
+                        </div>
+
+                        <div style="margin: 10px 0; height: 50px;width: 520px">
+                            <div style="float: left;width: 70px;height: 50px;line-height: 50px;font-size: 18px;">
+                                密码:
+                            </div>
+                            <input style="width: 412px;float: left;height: 50px" type="password" class="form-control" name="password" id="password" placeholder="{{'login.form.password.placeholder' | translate}}"
+                                   [(ngModel)]="password">
+                        </div>
+                        <div style="margin: 10px 0 0 70px; height: 50px;">
+                            <input style="float: left;height: 50px" type="checkbox" name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
+
+                            <div style="float: left;height: 50px;line-height: 50px;font-size: 18px;margin-left: 5px;">
+                                记住密码
+                            </div>
+                        </div>
+
+                        <div style="margin: 10px 0 0 70px; height: 50px;">
+                            <button style="width: 71%" type="submit" class="btn btn-primary" jhiTranslate="login.form.button">Sign in</button>
+                        </div>
+                        <!--<div style="margin: 10px 0 0 70px; height: 50px;">-->
+
+                        <!--<div class="alert alert-warning">-->
+                        <!--<a class="alert-link" (click)="requestResetPassword()" jhiTranslate="login.password.forgot">Did you forget your password?</a>-->
+                        <!--</div>-->
+                        <!--</div>-->
+                    </form>
+                    <p></p>
+                </div>
             </div>
 
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
-            </div>
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
-                <a class="alert-link" routerLink="register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
-            </div>
         </div>
 
-        <p jhiTranslate="home.question">
-            If you have any question on JHipster:
-        </p>
-
-        <ul>
-            <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener" jhiTranslate="home.link.homepage">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener" jhiTranslate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
-            <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener" jhiTranslate="home.link.bugtracker">JHipster bug tracker</a></li>
-            <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener" jhiTranslate="home.link.chat">JHipster public chat room</a></li>
-            <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener" jhiTranslate="home.link.follow">follow @java_hipster on Twitter</a></li>
-        </ul>
-
-        <p>
-            <span jhiTranslate="home.like">If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener" jhiTranslate="home.github">GitHub</a>!
-        </p>
+        <div class="card-body1" style="font-size: 50px;text-align: center;margin:5% auto;" *ngSwitchCase="true">
+            欢迎进入医联体系统<br>
+            <span style="font-size: 35px;" id="home-logged-message" *ngIf="account" jhiTranslate="home.logged.message"
+                  translateValues="{username: '{{account.login}}'}"></span>
+        </div>
     </div>
 </div>
