--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -25,7 +25,7 @@
                                 密码:
                             </div>
                             <input style="width: 412px;float: left;height: 50px" type="password" class="form-control" name="password" id="password" placeholder="{{'login.form.password.placeholder' | translate}}"
-                                   [(ngModel)]="password">
+                                   [(ngModel)]="password" required>
                         </div>
                         <div style="margin: 10px 0 0 70px; height: 50px;">
                             <input style="float: left;height: 50px" type="checkbox" name="rememberMe" id="rememberMe" [(ngModel)]="rememberMe" checked>
