--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -17,7 +17,7 @@ Main page styles
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     .hipster {
-        background: url('../../content/images/man.png') no-repeat center top;
+        background: url('../../content/images/timg.jpeg') no-repeat center top;
         background-size: contain;
     }
 }
