--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -14,7 +14,7 @@
                     <form class="form" role="form" (ngSubmit)="login()">
                         <div style="margin: 10px 0; height: 50px;width: 520px">
                             <div style="float: left;width: 70px;height: 50px;line-height: 50px;font-size: 18px;">
-                                账号:
+                                <fa-icon [icon]="['fas', 'user']"></fa-icon>
                             </div>
                             <input style="width: 412px;float: left;height: 50px" type="text" class="form-control" name="username" id="username" placeholder="{{'global.form.username.placeholder' | translate}}"
                                    [(ngModel)]="username">
@@ -22,7 +22,7 @@
 
                         <div style="margin: 10px 0; height: 50px;width: 520px">
                             <div style="float: left;width: 70px;height: 50px;line-height: 50px;font-size: 18px;">
-                                密码:
+                                <fa-icon [icon]="['fas', 'key']"></fa-icon>
                             </div>
                             <input style="width: 412px;float: left;height: 50px" type="password" class="form-control" name="password" id="password" placeholder="{{'login.form.password.placeholder' | translate}}"
                                    [(ngModel)]="password" required>
@@ -53,15 +53,15 @@
         <div class="row col-md-12">
             <div class="col-md-4" style="font-size: 50px;text-align: center;margin:5% auto;" *ngSwitchCase="true">
                 <span style="font-size: 35px;" *ngIf="account" ></span>
-                <div echarts [options]="options"></div>
+                <div echarts [options]="examOptions"></div>
             </div>
             <div class="col-md-4" style="font-size: 50px;text-align: center;margin:5% auto;" *ngSwitchCase="true">
                 <span style="font-size: 35px;" id="home-logged-message" *ngIf="account" ></span>
-                <div echarts [options]="options"></div>
+                <div echarts [options]="labOptions"></div>
             </div>
             <div class="col-md-4" style="font-size: 50px;text-align: center;margin:5% auto;" *ngSwitchCase="true">
                 <span style="font-size: 35px;" *ngIf="account" ></span>
-                <div echarts [options]="options"></div>
+                <div echarts [options]="phyOptions"></div>
             </div>
         </div>
 
