--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,7 +3,7 @@
         <span class="hipster img-fluid rounded"></span>
     </div>
     <div class="col-md-7" [ngSwitch]="isAuthenticated()">
-        <div class="card-body1" style="text-align: center;margin:5% auto;" *ngSwitchCase="false">
+        <div class="card-body" style="text-align: center;margin:5% auto;" *ngSwitchCase="false">
 
             <div>
                 <div style="width: 520px;margin: auto;">
