--- a/src/main/webapp/app/entities/hospital/hospital-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/hospital/hospital-delete-dialog.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p id="jhi-delete-hospital-heading" jhiTranslate="jhipsterApp.hospital.delete.question" translateValues="{id: '{{hospital.id}}'}">Are you sure you want to delete this Hospital?</p>
+        <p id="jhi-delete-hospital-heading" jhiTranslate="jhipsterApp.hospital.delete.question" translateValues="{id: '{{hospital.id}}'}">你确定要删除这家医院吗?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
