医院列表代码

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -43,6 +43,12 @@
                             <span jhiTranslate="global.menu.entities.hospital">User management</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="schoolgirl" routerLinkActive="active" (click)="collapseNavbar()">
+                            <fa-icon [icon]="'user'" [fixedWidth]="true"></fa-icon>
+                            <span jhiTranslate="global.menu.entities.schoolgirl">schoolgirl management</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
